--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,8 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 target_link_libraries(executable_name library_name)
 
 target_include_directories(executable_name PRIVATE lib/include)
-find_library(LIB_DIR subandmulti lib)
+find_library(LIB_DIR NAMES divandmod subandmulti PATHS lib)
+message("LIBDIR${LIB_DIR}")
+find_library(LIB2 divandmod lib)
+message("LIB2${LIB2}")
 target_link_libraries(executable_name ${LIB_DIR})
